# influxdb-cxx

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
debian/: changelog  control  copyright  libinfluxdb-cxx-dev.install  libinfluxdb-cxx0.7.install  rules
include/: InfluxDB.h  InfluxDBException.h  InfluxDBFactory.h  LineSerializer.h  LineSerializerPMR.h  Point.h  Transport.h
src/: CMakeLists.txt  HTTP.cxx  HTTP.h  InfluxDB.cxx  InfluxDBFactory.cxx  LineSerializer.cxx  LineSerializerPMR.cxx  LineSerializerV1.cxx  LineSerializerV1.h  Point.cxx  UDP.cxx  UDP.h  UnixSocket.cxx  UnixSocket.h  UriParser.h
test/: CMakeLists.txt  testHttp.cxx  testInfluxDB.cxx  testPmrInfluxDB.cxx  testPmrPoint.cxx  testPoint.cxx  testQuery.cxx
test_package/: example.cpp
